SERVER-58176 Remove override for supportsReadConcern in ClusterWriteCmd

(cherry picked from commit db3f81f7f409688b537ccdcf0d7212a8fd7c5d2c)