src/mongo/s/commands/cluster_write_cmd.cpp
@@ -633,10 +633,6 @@ private:
         return true;
     }
 
-    ReadConcernSupportResult supportsReadConcern(repl::ReadConcernLevel level) const final {
-        return ReadConcernSupportResult::allSupportedAndDefaultPermitted();
-    }
-
     void doCheckAuthorization(OperationContext* opCtx) const final {
         try {
             doCheckAuthorizationHook(AuthorizationSession::get(opCtx->getClient()));
